# AsFem

./: .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md
include/: Welcome.h
include/BCSystem/: BCBlockInfo.h  BCInfo.h  BCSystem.h
include/DofHandler/: DofHandler.h
include/ElementSystem/: ElementSystem.h  KernelBlockInfo.h
include/EquationSystem/: EquationSystem.h
include/FE/: FE.h
include/FESystem/: FEAnalysis.cpp  FESystem.h  FESystemInfo.h
include/GaussPoint/: GaussPoint.h
include/ICSystem/: ICBlockInfo.h  ICInfo.h  ICSystem.h
include/InputSystem/: InputSystem.h
include/Mesh/: GmshIO.h  Mesh.h
include/MsgPrint/: MsgPrintForInput.h  MsgPrintForProgram.h
include/OutputSystem/: OutputSystem.h
include/ShapeFuns/: ShapeFuns.h
include/Solver/: LinearSolver.h  NonlinearSolver.h
include/Utils/: MatrixTools.h  RankFourTensor.h  RankOneTensor.h  RankTwoTensor.h  StringUtils.h
scripts/: clean.py
src/: main.cpp
src/BCSystem/: ApplyBoundaryCondition.cpp  ApplyConstraint.cpp  ApplyDirichletBC.cpp  ApplyNeumannBC.cpp  BCInfo.cpp  BCSystem.cpp
src/BCSystem/userbc/: ubc1.cpp
src/DofHandler/: CreateLocalToGlobalDofMap.cpp  DofHandler.cpp  DofHandlerSetting.cpp  GetDofHandlerInfo.cpp  PrintDofHandlerInfo.cpp
src/ElementSystem/: ElementSystem.cpp  ElementSystemSetting.cpp  ElementalProjection.cpp  KernelBlockInfo.cpp  RunElmtLib.cpp
src/ElementSystem/elements/: AllenCahn.cpp  CahnHilliard.cpp  PhaseFieldFracture.cpp  Poisson.cpp  SolidMechanics.cpp  SolidMechanicsTools.cpp  ThermalMechanics.cpp
src/ElementSystem/materials/: DeformGradMaterial.cpp  FreeEnergyForAllenCahn.cpp  FreeEnergyForCahnHilliard.cpp  FreeEnergyMaterials.cpp  LinearElasticMaterial.cpp  MechanicsMaterials.cpp  MieheFractureMaterial.cpp  NeoHookeanMaterial.cpp  ThermalElasticMaterial.cpp
src/ElementSystem/uel/: elmt01.cpp
src/EquationSystem/: EquationSystem.cpp  EquationSystemInitAndReinit.cpp  EquationSystemMathUtils.cpp  EquationSystemSetting.cpp  GetEquationSystemInfo.cpp
src/FE/: FE.cpp  FEAssemble.cpp  FormKR.cpp  InitFE.cpp
src/FESystem/: BackwardEulerMethod.cpp  FEAnalysis.cpp  FESystem.cpp  FESystemAssemble.cpp  FESystemInfo.cpp  FESystemSetting.cpp  FormKR.cpp  InitFESystem.cpp  RunFESystem.cpp
src/GaussPoint/: Int1D.cpp  Int2D.cpp  Int3D.cpp
src/ICSystem/: ApplyInitialCondition.cpp  CircleIC.cpp  ConstantIC.cpp  ICInfo.cpp  ICSystem.cpp  RandomIC.cpp  RandomNoiseIC.cpp  RingIC.cpp
src/InputSystem/: InputSystem.cpp  ReadBoundaryBlock.cpp  ReadDofsName.cpp  ReadFESystemInfo.cpp  ReadICBlock.cpp  ReadInputFile.cpp  ReadKernelBlock.cpp  ReadMeshBlock.cpp
src/Mesh/: Create1DMesh.cpp  Create2DMesh.cpp  Create3DMesh.cpp  CreateMesh.cpp  GetMeshInfo.cpp  ImportGmsh.cpp  Mesh.cpp  MeshSettings.cpp  PrintAndSaveMesh.cpp  PrintMeshInfo.cpp  ReadMesh.cpp  SaveMeshAsVTU.cpp
src/Mesh/GmshIO/: GetVTKCellTypeViaElmtType.cpp  GmshIO.cpp  GmshIOGetInfo.cpp  ReadMshFile.cpp
src/MsgPrint/Input/: Msg_Gmsh_ImportFailed.cpp  Msg_Gmsh_NoMshFile.cpp  Msg_Gmsh_UnsupportElmtType.cpp  Msg_InputFileNameWrong.cpp  Msg_InputFile_MeshBlock_NoDim.cpp  Msg_InputFile_MeshBlock_XYZNotFound.cpp  Msg_InputFile_NoNumberFound.cpp  Msg_InputSystemInitWarning.cpp
src/MsgPrint/Program/: Msg_ExitProgram.cpp
src/OutputSystem/: OutputSystem.cpp  WriteToVTUFile.cpp
src/ShapeFuns/: Shp1D.cpp  Shp2D.cpp  Shp3D.cpp
src/Solver/Linear/: GetLinearSolverInfo.cpp  LinearSolver.cpp  LinearSolverSetting.cpp
src/Solver/Nonlinear/: NRWithLineSearch.cpp  NewtonRaphson.cpp  NonLinearConvergenceCheck.cpp  NonlinearSolve.cpp  NonlinearSolver.cpp  NonlinearSolverSetting.cpp
src/Utils/MathUtils/: MatrixTools.cpp  RankFourTensor.cpp  RankOneTensor.cpp  RankTwoTensor.cpp
src/Utils/StringUtils/: GotoLine.cpp  IsBracketMatch.cpp  IsSubBracketMatch.cpp  RemoveSpace.cpp  SplitNum.cpp  SplitNumAfter.cpp  SplitStr.cpp  SplitStrFromBracket.cpp  StrToLower.cpp  StrToUpper.cpp  StrVecToLower.cpp  StrVecToUpper.cpp
